# sigma-ground

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CLAUDE.md  GOLDEN_RULES.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: alloy_Tc_predictions.html  alloy_predictions.json  beyond_mcmillan.html  dependency_chart.html  mcmillan_validation.html
examples/: 01_gold_ring_inventory.py  02_water_bottle_hierarchy.py  03_car_battery_checksum.py  04_earths_layers_apply.py  05_solar_system_full_dump.py  clone_sol.sh
misc/: OPERATIC_PLAY_SCENE10_THE_ATOM_AND_THE_SHELVES.txt  OPERATIC_PLAY_SCENE10_THE_LIBRARY_STANDS_ALONE.txt  OPERATIC_PLAY_SCENE11_THE_SHAPER_RISES.txt  OPERATIC_PLAY_SCENE12_THE_RENDERER_SEES.txt  OPERATIC_PLAY_SCENE13_THE_FLICKERING_STAR.txt  OPERATIC_PLAY_SCENE14_THE_GOLDEN_RULES.txt  OPERATIC_PLAY_SCENE15_THE_MACHINE_THAT_PREDICTS.txt  OPERATIC_PLAY_SCENE16_THE_MOTT_BOUNDARY.txt  OPERATIC_PLAY_SCENE17_THE_LANDSCAPE_COLLAPSES.txt  OPERATIC_PLAY_SCENE18_NAGATHA_FINDS_HER_VOICE.txt  OPERATIC_PLAY_SCENE19_THE_SNAKE_BY_THE_HEAD.txt  OPERATIC_PLAY_SCENE1_THE_ADMIRAL_DRAWS_HIMSELF.txt  OPERATIC_PLAY_SCENE20_THE_LATTICE_SINGS.txt  OPERATIC_PLAY_SCENE2_THE_ATOM_KNOWS_WHAT_IT_IS.txt  OPERATIC_PLAY_SCENE3_THE_LIBRARY_OF_LIGHT.txt  OPERATIC_PLAY_SCENE4_THE_GEM_IS_A_FILTER.txt  OPERATIC_PLAY_SCENE5_THE_UNIVERSE_TRAVELS_LIGHT.txt  OPERATIC_PLAY_SCENE6_SIGMA_GROUND_AND_THE_BREAKING_WATERS.txt  OPERATIC_PLAY_SCENE7_THE_GOLDEN_ANGLE_AND_THE_N_SQUARED_WALL.txt  OPERATIC_PLAY_SCENE8_THE_GLASS_AND_THE_GOLDEN_ANGLE.txt  OPERATIC_PLAY_SCENE9_NAGATHA_LEARNS_TO_WEIGH_THINGS.txt  PAPER_sigma_moduli_stabilization.txt  SESSION_LOG.md
scripts/: lambda_regression.py  make_alloy_chart.py  make_beyond_mcmillan_chart.py  make_dependency_chart.py  make_mcmillan_chart.py  predict_alloy_Tc.py
sigma_ground/: __init__.py  constants.py  csg.py  (+2 more)
(+281 files in other folders)
